--- a/PiPath/package.json
+++ b/PiPath/package.json
@@ -17,8 +17,10 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/icons-material": "^6.2.1",
     "@mui/material": "^6.2.1",
+    "flowbite-react": "^0.10.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
