--- a/PiPath/package.json
+++ b/PiPath/package.json
@@ -18,6 +18,7 @@
     "@mui/icons-material": "^6.2.1",
     "@mui/material": "^6.2.1",
     "flowbite-react": "^0.10.2",
+    "framer-motion": "^11.15.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0"
