--- a/MathPath/package.json
+++ b/MathPath/package.json
@@ -19,9 +19,12 @@
     "@mui/material": "^6.2.1",
     "flowbite-react": "^0.10.2",
     "framer-motion": "^11.15.0",
+    "katex": "^0.16.19",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.4.0"
+    "react-icons": "^5.4.0",
+    "react-katex": "^3.0.1",
+    "react-router-dom": "^7.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
