--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/icons-material": "^6.2.1",
     "@mui/material": "^6.2.1",
+    "@tensorflow/tfjs": "^4.22.0",
     "flowbite-react": "^0.10.2",
     "framer-motion": "^11.15.0",
     "katex": "^0.16.19",
